route.tf
# creating route table
resource "aws_route_table" "tf-route" {
  vpc_id = aws_vpc.tf-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.tf-igw.id

  }
  tags = {
    name = "route to internet"

  }

}

# associating route table
resource "aws_route_table_association" "rt1" {
  subnet_id      = aws_subnet.tf-sn-1.id
  route_table_id = aws_route_table.tf-route.id
}

# associating route table
resource "aws_route_table_association" "rt2" {
  subnet_id      = aws_subnet.tf-sn-2.id
  route_table_id = aws_route_table.tf-route.id

}
